[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.flake8]
# Ignore only the import related errors because isort handles them.
ignore = "I100, I201"

[project]
name = "vis4d-template"
description = "Template repository for vis4d."
version = "0.0.0"

[tool.setuptools.packages.find]
include = ["vis4d-template*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
