[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.pyright]
include = ["vis4d-template"]
typeCheckingMode = "off"

[project]
name = "vis4d-template"
description = "Template repository for vis4d."
version = "0.0.0"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["vis4d-template*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
